# Netover-Straighter

./: .env  .gitignore  README.md  app.code-workspace  index.html  index.js  package-lock.json  package.json  vite.config.js  ws.js
apps/host/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/host/src-tauri/src/: lib.rs  scratch_serde.rs
apps/host/src-tauri/src/config/: config-main.rs  mod.rs
apps/host/src-tauri/src/crypto/: crypto.rs
apps/host/src-tauri/src/launch/: description.md  launching_main.rs  mod.rs
apps/host/src-tauri/src/launch/InputInjector/: types.rs
apps/host/src-tauri/src/launch/InputInjector/platform/: mac.rs  windows.rs
apps/host/src-tauri/src/launch/InputInjector/platform/keymaps/: windows.toml
apps/host/src-tauri/src/launch/ScreenOutputer/: mod.rs  types.rs
apps/host/src-tauri/src/launch/ScreenOutputer/AudioCapture/: mod.rs
apps/host/src-tauri/src/launch/ScreenOutputer/AudioCapture/platform/: mod.rs  windows.rs
apps/host/src-tauri/src/launch/ScreenOutputer/AudioEncoder/: mod.rs
apps/host/src-tauri/src/launch/ScreenOutputer/AudioEncoder/encoders/: opus.rs
apps/host/src-tauri/src/launch/ScreenOutputer/Capture/: mod.rs
apps/host/src-tauri/src/launch/ScreenOutputer/Capture/platform/: windows.rs
apps/host/src-tauri/src/launch/ScreenOutputer/Encoder/: mod.rs
apps/host/src-tauri/src/launch/ScreenOutputer/Encoder/encoders/: h264.rs
apps/host/src-tauri/src/manage/: manage_main.rs  mod.rs
apps/host/src-tauri/src/pairing/: pairing_main.rs
apps/host/src-tauri/src/ws/: def.rs  mod.rs  wshandle.rs
components/: shared.js
(+69 files in other folders)
