[package]
name = "app"
version = "1.2.0"
description = "Netover Straighter - Host"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
bindgen = "0.69.4"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2.5.0"
sha2 = "0.10"
rand = "0.8.5"
x25519-dalek = "2.0.0"
hex = "0.4"
hkdf = "0.12"
base64 = "0.21"
regex = "1.10"
webrtc = "0.17"
keyring = "2"
hmac = "0.12"
toml = "0.9.12"
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
] }
async-trait = "0.1"
openh264 = "0.9.3"
rayon = "1"
audiopus = "0.2"

[profile.dev]
opt-level = 3
codegen-units = 1
